    bonds (Issue #373)
  * MDAnalysis.lib.distances.calc_torsions renamed to calc_dihedrals (Issue #373)
  * TopologyGroup.selectBonds renamed to select_bonds
  * TopologyObjects and TopologyGroup moved to core.topologyobjects module
  * deprecated camelCase AtomGroup methods in favour of underscore_style
    (Issue #389)
  * deprecate lib.distances.applyPBC in favour of apply_PBC (Issue #389)

  Fixes
  * Fixed PDB Parser and Reader requiring occupancy field (Issue #396)
  * Amber TRJ and NCDF Reader & Writers now use 'dt' instead of 'delta'
    to refer to time elapsed between timesteps. (Issue #350 and #206)
  * Fixed TPRParser considering LJ 1..4 exclusions as bonds (Issue #351)
  * ChainReaders no longer leak (Issue #312)
  * analysis.hbonds.HydrogenBondAnalysis performs a sanity check for
    static selections (Issue #296)
  * Fixed TRZWriter failing when passed a non TRZTimestep (Issue #302)
  * relative imports are now banned in unit testing modules
    (Issue #189)
  * Fixed bug and added DivisionByZero exception in analysis/waterdinamics.py
    in SurvivalProbability.
  * Fixed parsing of PDB header data for PrimitivePDBReader (Issue #332)
  * Fixed contact_matrix handles periodic boundary conditions correctly for
    sparse matrices.
  * Fixed analysis.hole not using CPOINT (Issue #384)

06/01/15  richardjgowers, caio s. souza, manuel.nuno.melo, orbeckst,
          sseyler
  * 0.10.0

  Enhancements

  * Improved performance of PDB Reading.  Up to 3x faster. (Issue #212)
  * Added the 'same ... as' selection keyword (Issue #217)
  * Added guess_bonds keyword argument to Universe creation.  This will attempt to
    guess all topology information on Universe creation. (Issue #245)
  * Added guess_bonds method to AtomGroup. (Issue #245)
  * All TopologyObjects (Bond, Angle etc) now have is_guessed attribute
  * TopologyGroup now has alternate constructor method, .from_indices()
  * Added TopologyObject.indices property